# refcpp

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  company.cpp  company.hpp  graphviz.cpp  json.hpp  mapping.cpp  person.cpp
examples/utils/: CMakeLists.txt  ReferenceResolver.cpp  StructuralContext.cpp  StructuralContext.hpp  test.cpp
ref/: CMakeLists.txt  Class.hpp  Descriptors.hpp  DescriptorsImpl.hpp  DescriptorsImpl.ipp  Holder.hpp  mpl.hpp
ref/detail/: Name.hpp
ref/utils/: JsonSerializer.cpp  JsonSerializer.hpp  ReferenceResolver.cpp  ReferenceResolver.hpp  StructuralContext.cpp  StructuralContext.hpp
test/: CMakeLists.txt  test_descriptor.cpp  test_feature.cpp  test_structuralcontext.cpp
